* Fixing some spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ p {
   #INTRO
 ============================================================================= */
 .intro {
-    margin: 90px auto;
+    margin: 90px auto 60px auto;
     max-width: 520px;
     width: 100%;
 
@@ -168,7 +168,7 @@ p {
   #FEATURES
 ============================================================================= */
 .features {
-    margin: 90px auto;
+    margin: 60px auto;
     max-width: 1110px;
     width: 100%;
 }
